h1, JSX, bullet points, emojis

--- a/Exercise Files/Ch02/index.html
+++ b/Exercise Files/Ch02/index.html
@@ -39,7 +39,7 @@
 
     <!-- Methods to create a basic h1 equivalent in HTML
     
-    Traditional HTML Method: 
+    Traditional HTML Method using h1: 
     <h1>Getting Started with React</h1>
 
     Method 1: 
