lists and react fragment shorthand

--- a/Exercise Files/Ch02/index.html
+++ b/Exercise Files/Ch02/index.html
@@ -22,6 +22,7 @@
     <!-- You have to change the script type if you are using emoji to babel, 
           else the default would be to use javascript -->
     <script type="text/babel">
+      // "let" is how you declare a local variable in Javascript
       let moon = "🌙";
       let heart = "❤";
       let celebration = "🎉";
